--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
+env:
+  global:
+    - GIT_COMMITTER_NAME=makotot
+    - GIT_COMMITTER_EMAIL=makoto.ttn@gmail.com
+    - GIT_AUTHOR_NAME=makotot
+    - GIT_AUTHOR_EMAIL=makoto.ttn@gmail.com
+    - secure: avQKZeUFgW+FyRnh3hyZKzcTzrTEHwOO0AFmOD4agrcsuJoIS2MSp3KGaK/gy2GujPJXhuLFETQnN0adXZMxQ9TdpJ2AsPUvZthP3L0V+6T07EsDIy/rAG0YykH849saYefmZEkiAuTDnn5NgrjfkysYZUvyPpPaBD2J1WRHojc=
+
 language: node_js
 
 node_js:
@@ -5,6 +13,16 @@ node_js:
 
 before_install:
   - npm install -g gulp
+  - git clone --quiet https://github.com/makotot/performance-notes.git
+  - pushd build
+  - git checkout -b gh-pages
+  - popd
 
 script:
   - gulp ci
+
+after_success:
+  - cd _gh-pages
+  - git add -A
+  - git commit -m 'update'
+  - '[ "$TRAVIS_BRANCH" == "master" ] && [ $GH_TOKEN ] && git push --quiet https://$GH_TOKEN@github.com/makotot/performance-notes.git gh-pages 2> /dev/null'
