--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ node_js:
 before_install:
   - npm install -g gulp
   - git clone --quiet https://github.com/makotot/performance-notes.git
-  - pushd build
+  - pushd _gh-pages
   - git checkout -b gh-pages
   - popd
 
