--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 env:
   global:
+    - GH_REPO="makotot/performance-notes"
     - GIT_COMMITTER_NAME=makotot
     - GIT_COMMITTER_EMAIL=makoto.ttn@gmail.com
     - GIT_AUTHOR_NAME=makotot
@@ -24,5 +25,5 @@ script:
 after_success:
   - cd _gh-pages
   - git add -A
-  - git commit -m 'update'
-  - '[ "$TRAVIS_BRANCH" == "master" ] && [ $GH_TOKEN ] && git push --quiet https://$GH_TOKEN@github.com/makotot/performance-notes.git gh-pages 2> /dev/null'
+  - git commit -m -q 'update'
+  - '[ "$TRAVIS_BRANCH" == "master" ] && [ $GH_TOKEN ] && git push -fq https://$GH_TOKEN@github.com/$GH_REPO.git gh-pages 2> /dev/null'
