--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,13 @@ before_script:
   - git clone --quiet https://github.com/makotot/performance-notes.git build
   - pushd build
   - git checkout -b gh-pages
-  - npm install
   - popd
 
 script:
   - gulp ci
 
 after_success:
-  - cd _gh-pages
+  - cd build
   - git add -A
   - git commit -m -q 'update'
   - '[ "$TRAVIS_BRANCH" == "master" ] && [ $GH_TOKEN ] && git push -fq https://$GH_TOKEN@github.com/$GH_REPO.git gh-pages 2> /dev/null'
