--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "gulp"
   },
-  "author": "",
+  "author": "makotot",
   "license": "MIT",
   "devDependencies": {
     "gulp": "~3.8.6",
