--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
   - gulp ci
 
 after_success:
-  - cd build
+  - cd build && pwd
   - git add -A
-  - git commit -m -q 'update'
+  - git commit -m 'update'
   - '[ "$TRAVIS_BRANCH" == "master" ] && [ $GH_TOKEN ] && git push -fq https://$GH_TOKEN@github.com/$GH_REPO.git gh-pages 2> /dev/null'
