--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ language: node_js
 node_js:
   - 0.10
 
+branches:
+  only:
+    - master
+
 before_script:
   - npm install -g gulp
   - git clone --quiet https://github.com/makotot/performance-notes.git build
