--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,13 @@ before_script:
   - git clone --quiet https://github.com/makotot/performance-notes.git build
   - cd build
   - git checkout -b gh-pages
-  - cd ../
+  - cd ../ && pwd
 
 script:
   - gulp ci
 
 after_success:
-  - cd build/ && pwd
+  - cd build/ && ls
   - git add -A
   - git commit -m 'update'
   - '[ "$TRAVIS_BRANCH" == "master" ] && [ $GH_TOKEN ] && git push -fq https://$GH_TOKEN@github.com/$GH_REPO.git gh-pages 2> /dev/null'
