--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
   - npm install -g gulp
   - git clone --quiet https://github.com/makotot/performance-notes.git build
   - cd build
-  - git checkout -b gh-pages
+  - git checkout -B gh-pages
   - cd ../ && ls
 
 script:
