--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "Gulpfile.js",
   "scripts": {
-    "test": "gulp"
+    "test": "gulp ci"
   },
   "author": "makotot",
   "license": "MIT",
