--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-less": "~1.3.2",
     "rimraf": "~2.2.8",
     "run-sequence": "~0.3.6",
-    "bower": "~1.3.8"
+    "bower": "~1.3.8",
+    "gulp-util": "~3.0.0"
   }
 }
