--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "rimraf": "~2.2.8",
     "run-sequence": "~0.3.6",
     "bower": "~1.3.8",
-    "gulp-util": "~3.0.0"
+    "gulp-util": "~3.0.0",
+    "gulp-csslint": "~0.1.4"
   }
 }
