--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "run-sequence": "~0.3.6",
     "bower": "~1.3.8",
     "gulp-util": "~3.0.0",
-    "gulp-csslint": "~0.1.4"
+    "gulp-csslint": "~0.1.4",
+    "gulp-htmlmin": "~0.1.3"
   }
 }
