--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "gulp-eslint": "~0.1.8",
     "gulp-connect": "~2.0.6",
     "gulp-less": "~1.3.2",
-    "rimraf": "~2.2.8",
     "run-sequence": "~0.3.6",
     "bower": "~1.3.8",
     "gulp-util": "~3.0.0",
     "gulp-csslint": "~0.1.4",
-    "gulp-htmlmin": "~0.1.3"
+    "gulp-minify-html": "~0.1.4",
+    "del": "~0.1.1",
+    "rimraf": "~2.2.8"
   }
 }
