--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gulp-csslint": "~0.1.4",
     "gulp-minify-html": "~0.1.4",
     "del": "~0.1.1",
-    "rimraf": "~2.2.8"
+    "rimraf": "~2.2.8",
+    "gulp-browserify": "~0.5.0",
+    "gulp-uglify": "~0.3.1"
   }
 }
