--- a/.eslintrc
+++ b/.eslintrc
@@ -17,13 +17,15 @@
     "max-params": [1, 4],
     "semi": [1, "always"],
     "no-unused-vars": [1, {"vars": "all", "args": "after-used"}],
-    "eol-last": [0],
     "no-alert": [1],
     "brace-style": [2, "1tbs"],
     "no-mixed-spaces-and-tabs": [2, true],
     "no-trailing-spaces": [2],
     "space-after-keywords": ["always"],
-    "max-nested-callbacks": [2, 3],
-    "space-infix-ops": [2]
+    "max-nested-callbacks": [1, 3],
+    "space-infix-ops": [2],
+    "radix": [2],
+    "space-unary-word-ops": [2],
+    "wrap-regex": [2]
   }
 }
