--- a/src/data/bookmarks.yml
+++ b/src/data/bookmarks.yml
@@ -61,6 +61,9 @@ bookmarks:
         title: "Layout、Paintingとは何か？レンダリングから学ぶWebサイトのパフォーマンス | Dress Cording"
       - url: http://html5experts.jp/furoshiki/6242/
         title: "Navigation Timingだからできる、Webアプリを俯瞰したパフォーマンス計測(1/3) | HTML5Experts.jp"
+      - url: http://css-tricks.com/preventing-the-performance-hit-from-custom-fonts/
+        title: "Preventing the Performance Hit from Custom Fonts | CSS-Tricks"
+
     javascript:
       - url: http://www.stevesouders.com/blog/2009/04/27/loading-scripts-without-blocking/
         title: "Loading Scripts Without Blocking | High Performance Web Sites"
