--- a/src/data/bookmarks.yml
+++ b/src/data/bookmarks.yml
@@ -63,6 +63,8 @@ bookmarks:
         title: "Navigation Timingだからできる、Webアプリを俯瞰したパフォーマンス計測(1/3) | HTML5Experts.jp"
       - url: http://css-tricks.com/preventing-the-performance-hit-from-custom-fonts/
         title: "Preventing the Performance Hit from Custom Fonts | CSS-Tricks"
+      - url: http://d.hatena.ne.jp/jovi0608/20111209/1323428049
+        title: "HTML5で Speed Test, Navigation Timing APIによる性能データ収集 - ぼちぼち日記"
 
     javascript:
       - url: http://www.stevesouders.com/blog/2009/04/27/loading-scripts-without-blocking/
