--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     "space-unary-word-ops": [2],
     "wrap-regex": [2],
     "no-mixed-requires": [1, true],
-    "eol-last": [0]
+    "eol-last": [0],
+    "no-bitwise": [1]
   }
 }
