--- a/src/data/bookmarks.yml
+++ b/src/data/bookmarks.yml
@@ -67,6 +67,8 @@ bookmarks:
         title: "HTML5で Speed Test, Navigation Timing APIによる性能データ収集 - ぼちぼち日記"
       - url: http://www.html5rocks.com/en/tutorials/webperformance/basics/
         title: "Measuring Page Load Speed with Navigation Timing - HTML5 Rocks"
+      - url: http://www.stevesouders.com/blog/2014/08/21/resource-timing-practical-tips/
+        title: "Resource Timing practical tips | High Performance Web Sites"
 
     javascript:
       - url: http://www.stevesouders.com/blog/2009/04/27/loading-scripts-without-blocking/
