--- a/src/data/bookmarks.yml
+++ b/src/data/bookmarks.yml
@@ -153,6 +153,8 @@ bookmarks:
     javascript:
       - url: https://speakerdeck.com/addyosmani/javascript-memory-management-masterclass
         title: "JavaScript Memory Management Masterclass // Speaker Deck"
+      - url: http://imgur.com/blog/2013/04/30/tech-tuesday-avoiding-a-memory-leak-situation-in-js/
+        title: "Tech Tuesday: Avoiding a memory leak situation in JS – Imgur Blog"
 
   tool:
     noclassification:
