--- a/src/data/bookmarks.yml
+++ b/src/data/bookmarks.yml
@@ -152,6 +152,9 @@ bookmarks:
         title: "VelocityConf: Rendering Performance Case Studies // Speaker Deck"
       - url: http://www.slideshare.net/DavidAm/grunt-js-for-the-enterprise
         title: "Grunt js for the Enterprise Vol.1: Frontend Performance with Phantomas"
+      - url: http://www.slideshare.net/yoshikawa_t/webtips?next_slideshow=1
+        title: "モバイル時代のWebパフォーマンスTips"
+
     javascript:
       - url: https://speakerdeck.com/addyosmani/javascript-memory-management-masterclass
         title: "JavaScript Memory Management Masterclass // Speaker Deck"
