--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-minify-html": "~0.1.4",
     "del": "~0.1.1",
     "gulp-browserify": "~0.5.0",
-    "gulp-uglify": "~0.3.1"
+    "gulp-uglify": "~0.3.1",
+    "rimraf": "~2.2.8"
   }
 }
