--- a/src/data/bookmarks.yml
+++ b/src/data/bookmarks.yml
@@ -71,6 +71,10 @@ bookmarks:
         title: "Resource Timing practical tips | High Performance Web Sites"
       - url: http://wazanova.jp/items/1128
         title: "Gruntとgulp.jsでサイトパフォーマンスを向上させる -  ワザノバ | wazanova"
+      - url: http://wazanova.jp/items/1529
+        title: "サイトパフォーマンス: 1000msを目指す取組み -  ワザノバ | wazanova"
+      - url: http://www.smashingmagazine.com/2014/09/08/improving-smashing-magazine-performance-case-study/
+        title: "Improving Smashing Magazine's Performance: A Case Study | Smashing Magazine"
 
     javascript:
       - url: http://www.stevesouders.com/blog/2009/04/27/loading-scripts-without-blocking/
@@ -109,6 +113,9 @@ bookmarks:
         title: "Speeding up AngularJS apps with simple optimizations - Tutorial - Binpress"
       - url: http://imgur.com/blog/2013/04/30/tech-tuesday-avoiding-a-memory-leak-situation-in-js/
         title: "Tech Tuesday: Avoiding a memory leak situation in JS – Imgur Blog"
+      - url: http://www.stevesouders.com/blog/2014/02/11/measuring-localstorage-performance/
+        title: "Measuring localStorage Performance | High Performance Web Sites"
+
     css:
       - url: http://css-tricks.com/efficiently-rendering-css/
         title: "Efficiently Rendering CSS | CSS-Tricks"
