--- a/src/data/bookmarks.yml
+++ b/src/data/bookmarks.yml
@@ -190,6 +190,8 @@ bookmarks:
       title: "PerfBar"
     - url: https://github.com/gmetais/grunt-devperf
       title: "gmetais/grunt-devperf"
+    - url: http://perf-tooling.today/
+      title: "Performance tooling today"
 
 
     html:
