--- a/src/data/bookmarks.yml
+++ b/src/data/bookmarks.yml
@@ -195,6 +195,8 @@ bookmarks:
       title: "gmetais/grunt-devperf"
     - url: http://perf-tooling.today/
       title: "Performance tooling today"
+    - url: https://github.com/addyosmani/timing.js
+    title: "addyosmani/timing.js"
 
 
     html:
