--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "del": "~1.1.0",
     "gulp-browserify": "~0.5.0",
     "gulp-uglify": "~1.0.2",
-    "rimraf": "~2.2.8"
+    "rimraf": "~2.2.8",
+    "gulp-ruby-sass": "~0.7.1"
   }
 }
